# Connected-Products-Starter-Kit-Product-Management

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
cloud/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
cloud/cdk/lib/: connected-products-stack.ts
cloud/cdk/scripts/: deprovision-device.mjs  provision-device.mjs
cloud/lambda/: package-lock.json  package.json  tsconfig.json
cloud/lambda/src/: ingest.ts  query.ts  schema.ts
dashboard/: index.html  package-lock.json  package.json  tsconfig.json
dashboard/src/: app.ts
device/python/: requirements.txt  simulator.py
device/rust/: Cargo.toml  README.md
device/rust/.cargo/: config.toml
device/rust/src/: main.rs
docs/: ARCHITECTURE.md  rubric.md
